[package]
name = "hiit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version="0.8.1", features = ["gnome_46", "libadwaita"] }
relm4-components = "0.8.1"
relm4-macros = "0.9.0"
relm4-icons = { version = "0.8.3" }
libadwaita = { version="0.6.0", features = ["v1_5"] }
tokio = { version = "1.39", features = [
    "rt",
    "macros",
    "time",
    "rt-multi-thread",
] }
futures = "0.3.30"
rodio = { version="0.19.0", default-features=false, features = ["wav"] }
json = "0.12.4"

[build-dependencies]
glib-build-tools = "0.19.0"
