[package]
name = "hiit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
relm4 = { version="0.9.0", features = ["gnome_47", "libadwaita"] }
relm4-components = "0.9.1"
relm4-macros = "0.9.0"
relm4-icons = { version = "0.9.0" }
libadwaita = { version="0.7.0", features = ["v1_7"] }
tokio = { version = "1.39.1", features = [
    "rt",
    "macros",
    "time",
    "rt-multi-thread",
] }
futures = "0.3.30"
rodio = { version="0.20.1", default-features=false, features = ["wav"] }
json = "0.12.4"

[build-dependencies]
glib-build-tools = "0.20.0"
