[package]
name = "hiit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
relm4 = { version="0.10.0", features = ["gnome_48", "libadwaita"] }
relm4-components = "0.10.0"
relm4-macros = "0.10.0"
relm4-icons = "0.10.0"
libadwaita = { version="0.8.0", features = ["v1_8"] }
tokio = { version = "1.48.0", features = [
    "rt",
    "macros",
    "time",
    "rt-multi-thread",
] }
futures = "0.3.31"
rodio = { version="0.21.1", default-features=false, features = ["playback", "wav"] }
json = "0.12.4"

[build-dependencies]
glib-build-tools = "0.21.0"
relm4-icons-build = "0.10"
